<resources>
    <string name="app_name">Checked</string>
    <string name="invite_code">Invite code</string>
    <string name="create_a_new_database">Create a new Database</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_as_a_guest">Sign in as a guest</string>
    <string name="or">OR</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="connect">Connect</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="shopping">Shopping</string>
    <string name="recipes">Recipes</string>
    <string name="save">save</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="products">Products</string>
    <string name="stores">Stores</string>
    <string name="not_in_the_database">Not in the database</string>
    <string name="name">Name</string>
    <string name="required">required*</string>
    <string name="quantity">Quantity</string>
    <string name="weight">Weight</string>
    <string name="brand">Brand</string>
    <string name="expiration_date">Expiration date</string>
    <string name="expiration_dates">Expiration dates</string>
    <string name="basic_foods">Basic foods</string>
    <string name="dairy">Dairy</string>
    <string name="drinks">Drinks</string>
    <string name="meat">Meat</string>
    <string name="sweets_and_snacks">Sweets and snacks</string>
    <string name="frozen_foods">Frozen foods</string>
    <string name="household">Household</string>
    <string name="fruits_and_vegetables">Fruits and vegetables</string>
    <string name="fill_in_all_the_fields">Fill in all the fields</string>
    <string name="invalid_invite_code">Invalid invite code</string>
    <string name="no_invite_code">No invite code</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="add_expiration_date">Add Expiration Date</string>
    <string name="cant_go_lower">Can\'t go lower</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="empty">Empty</string>
    <string name="share_text">Checked database invite code is</string>
    <string name="price">Price</string>
    <string name="currency">din</string>
    <string name="update_product">Update Product</string>
    <string name="new_product">New Product</string>
    <string name="update">Update</string>
    <string name="additional_information">Additional information</string>
    <string name="low">low</string>
    <string name="full">full</string>
    <string name="cannot_be_0">Cannot be 0</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="add">Add</string>
    <string name="create">Create</string>
    <string name="items">items</string>
</resources>