<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.djordjeratkovic.checked.ui.home.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_shopping"
            app:destination="@id/navigation_shopping" />
    </fragment>

    <fragment
        android:id="@+id/navigation_shopping"
        android:name="com.djordjeratkovic.checked.ui.home.ui.shopping.ShoppingFragment"
        android:label="@string/shopping"
        tools:layout="@layout/fragment_shopping">
        <action
            android:id="@+id/action_navigation_shopping_to_navigation_recipes"
            app:destination="@id/navigation_recipes" />
    </fragment>

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.djordjeratkovic.checked.ui.home.ui.recipe.RecipesFragment"
        android:label="@string/recipes"
        tools:layout="@layout/fragment_recipes">
        <action
            android:id="@+id/action_navigation_recipes_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>