<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.RegisterActivity">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerWithGoogle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_google"
            app:layout_constraintBottom_toTopOf="@+id/registerWithFacebook"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerWithFacebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_facebook"
            app:layout_constraintBottom_toTopOf="@+id/registerAsAGuest"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/registerWithGoogle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerAsAGuest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_as_a_guest"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/registerWithFacebook" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>