<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="expirationDate"
            type="com.djordjeratkovic.checked.model.ExpirationDate" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_8">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/quantity"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            app:endIconMode="clear_text"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantityEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="number"
                android:text="@{Integer.toString(expirationDate.quantity)}"
                android:textSize="13sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expirationDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/expiration_date"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconMode="custom"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red"
            app:layout_constraintEnd_toStartOf="@id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expirationDateEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="@{expirationDate.gatDateString()}"
                android:textSize="13sp" />

        </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/deleteExpirationDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/delete_button_background"
                    android:padding="@dimen/dimen_8"
                    app:tint="@color/red"
                    android:layout_marginBottom="@dimen/dimen_14"
                    android:src="@drawable/ic_delete"
                    app:layout_constraintBottom_toBottomOf="@+id/expirationDate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/expirationDate"
                    app:layout_constraintTop_toTopOf="@+id/expirationDate" />




        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.30" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>